# tower-of-tech

./: .denoflare  .gitignore  README.md  deno.json  deno.jsonc  example.ts  importMap.dev.json  importMap.json  importMap.jsonc  importMap.local.json  memoryTest.ts  purge.ts  push.ts  serve.ts  tailwind.config.js
.github/workflows/: deploy.yml  deploy_apps_discord-bot.yml  deploy_apps_discord-bot_register-commands.yml  deploy_apps_editor.yml
.moon/: toolchain.yml
apps/beatleader-bot/: beatleader-zod.ts  deps.ts  parser.e2e.ts  parser.test.ts  record-packets.ts
apps/cli/: Cargo.toml  Makefile  main.ts
apps/cli/src/: main.rs
apps/discord-bot/: client.ts  createTechMultiEvent.ts  deps.ts  main.ts  serveHttp.ts
apps/documentation/: main.ts
apps/editor/: App.tsx  Routing.tsx  client.tsx  routing.config.ts  routing.tsx  server.tsx
apps/home/: App.tsx  client.tsx  deno.json  fresh.gen.ts  routing.tsx  server.tsx
apps/homepage/: client.tsx  routing.tsx  server.tsx  shell-app.tsx  shell.tsx
apps/twitch-bot/: types.ts
apps/website/: App.tsx  Routing.tsx  client.tsx  deno.jsonc  fresh.gen.ts  importMap.json  routing.config.ts  server.tsx
apps/website-old/: Routing.tsx  client.tsx  server.tsx
apps/websocket-proxy-beatleader/: index.ts
assets/: future-cover.prompt  playlist-detail.prompt
data/playlists/: 5545 - ToT - AdepComfy.bplist  5555 - ToT - AdepTech.bplist  5556 - ToT - AdepHitech.bplist  5565 - ToT - AdepAnglehell.bplist  (+56 more)
public/: style.css
scripts/: register-tot-bot-slash-commands.ts  s3s-fs-local.sh
src/: constants.ts  main.ts
(+376 files in other folders)
