[package]
name = "tower_of_tech"
version = "0.0.0"
edition = "2018"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
thiserror = "1.0"
